various improvements javascript in generalinfomodule form fixed and added tests added help text to page titel and generalinfomodule pronouns field feedback when link copied to clipboard

--- a/home/templates/home/examples.html
+++ b/home/templates/home/examples.html
@@ -24,7 +24,7 @@
                     <div class="col-auto text-right">
                       <form action="{% url "pages:duplicatepage" example.id %}" method="post">
                         {% csrf_token %}
-                        <button type="submit" name="toggle" class="btn btn-success">{% trans "Start from this example" %}</button>
+                        <button type="submit" name="submit" class="btn btn-success">{% trans "Start from this example" %}</button>
                       </form>
                     </div>
                   {% endif %}
