--- a/pages/templates/pages/page_list.html
+++ b/pages/templates/pages/page_list.html
@@ -66,7 +66,8 @@
                       {% csrf_token %}
                       {% if page.token %}
                         <p id="{{page.pk}}-token">{{ request|tokenurl:page }}</p>
-                        <button type="button" onclick="copyToClipboard('#{{page.pk}}-token')" class="btn btn-outline-secondary">{% trans "Copy link" %}</button>
+                        <button type="button" onclick="copyToClipboard(this, '#{{page.pk}}-token')" class="btn btn-outline-secondary"
+                        data-toggle="tooltip" data-placement="bottom" data-trigger="manual" data-title="{%trans "Link copied to clipboard" %}">{% trans "Copy link" %}</button>
                         <!-- Button trigger modal -->
                         <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#newLinkModal">
                           {% trans "Generate new link" %}
@@ -146,7 +147,7 @@
 {% endblock content %}
 {% block scripts %}
 <script>
-  function copyToClipboard(element) {
+  function copyToClipboard(button, element) {
     var $temp = $("<input>");
     $("body").append($temp);
     console.log($(element).text());
@@ -154,6 +155,10 @@
     document.execCommand("copy");
     console.log($temp.val());
     $temp.remove();
+    $(button).tooltip('show');
+    setTimeout(function() {
+      $(button).tooltip('hide')
+    }, 2000);
   }
 </script>
 {% endblock scripts %}
