add access to page preview from django admin

--- a/pages/templates/pages/page_preview.html
+++ b/pages/templates/pages/page_preview.html
@@ -7,7 +7,9 @@
     <div class="row">
       <div class="col">
         <a href={% if reason == "creating" %}"{% url "pages:addmodule" page.id %}"
-                {% elif reason == "final" %}"{% url "pages:pagelist" %}"{% endif %}>
+                {% elif reason == "final" %}"{% url "pages:pagelist" %}"
+                {% elif reason == "admin" %}"{% url "admin:pages_page_change" page.id %}"
+                {% endif %}>
                 {% trans "back" %} </a>
       </div>
     </div>
